fixed menu jumps

--- a/src/Mainframe/sidebarSection.scss
+++ b/src/Mainframe/sidebarSection.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-  backdrop-filter: blur(30px);
+  backdrop-filter: blur(20px);
   background: rgba(0, 0, 0, 0.2);
 
   .sidebar {
